@@ -1,6 +1,7 @@
-AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.30.tar.gz 3989635 BLAKE2B 7ecca3e8df9b9cd1f32d0a155449191626eb8dc632290a02acd8f2e687b4e6c6c7baffe27821cd074656558fcb01fe1148a76dbd7454734a2fd89a4b9f08043a SHA512 b5c5afe506b1fe38dbdb04bda866d0b35bdd7a8b744f263be6057d9c6b8f04a83b0132feffec4d0269ec2160f1cb26d7c87bb02433391820539c77a2fd91af40
-DIST epson-inkjet-printer-escpr2-1.1.31.tar.gz 4008828 BLAKE2B b81c72952bd01b0c6eb1ecad1f4c54391c632edbc5d8dc1fbdb7ddda92b0d586b94725873af076d6ad84bc4cbac0682aa47f2c8833bd4a8918dd9f610ce6a0ec SHA512 0a268bb65c58a94a9f7e46611e4c1925ca42a532d95f01dcbb849de9ab683cd9915200173d1082baf8f82c9487d34b0d56c93a373ecd6e8071672aa9e42b53fc
-EBUILD epson-inkjet-printer-escpr2-1.1.30.ebuild 1319 BLAKE2B e0c8986b413f6a438d82994b2cb561246d2b2499c994c8bf8fca19b265cd71037baa3e5a9211fc813c6b88dd6e2fe3e44fd75e5b23aa0e21bcc2b47ada91d38e SHA512 c5e176006dd759c7cfd8c6ac9a961e08f21c91d853588847aca757cdc310131886287d24711fcecbd5187f1fb6b436c596cc93f45343ccc30b8768f41d492ac3
-EBUILD epson-inkjet-printer-escpr2-1.1.31.ebuild 1319 BLAKE2B 2206bd4fb5844feccc7e3c2667125c5f88ba156dc90d74f043db058f47ba51954172a2009f6d13d3cbfa03c8b750ca0d1ce3d0cf09bd72c588dbac71031e0f48 SHA512 75688cb5a289b3625aede423ee613951eeefe5be683e306be59a832e24a93b02a2316947fdcf9e91f63befe3e543cd7fde837d0ee2a101eb31a59bcef75da977
-MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
+DIST epson-inkjet-printer-escpr2-1.1.31-1lsb3.2.i486.rpm 2768389 BLAKE2B 0090799201e5b3f031f1387ff6cb12db2be65712bb7ad4282c4eb70e71238c180ea38dc6bb0672cee033695d2054a4e8cd8cce7ed2e31229ec8b3741227bbb98 SHA512 49021d9db0cf4917d267c5390fc47f2cbc73b0301720e83ef774c29d46417c1b6d5aa6e71f3f3f4e3299faf08d80dbd4de907dfa0f597bb263a6c57c0bec077f
+DIST epson-inkjet-printer-escpr2-1.1.31-1lsb3.2.x86_64.rpm 2767725 BLAKE2B 4e94e5f600690d36ac7929b6602b14b371050828cffedadb49487d0e04e3fbb6cd9814cd5330efbb1fece89061917c347518c13733c6e0fd064045cc5271a81f SHA512 73a8d6d24a6ffc1d8795f4dc1ee8c4c592433b93731bc14b070cf5f75dd95c23d2cf2e66ba4c01c6a2b69cc2848ac4e825d2580245ece7f3fc0847c9c6307ff9
+DIST epson-inkjet-printer-escpr2-1.1.32-1lsb3.2.i486.rpm 2766335 BLAKE2B 229bdafac4b29ac4911c213522c0a182a0c15822a33507063aeba8d30cb2a81ec20a893c9a9300f52f5ad844e618bd2b65b35d28a9072829b709e2c3eec33cf0 SHA512 a4579a850f0a3e392b6f65d87b53ed39af0a66de1efc2b3fc9e9b0290d6d6e4c8af52fbcc0eeb4d32f62a8f1b1bf91fd1b815b471bd5d2b88ff41f0799ab46f6
+DIST epson-inkjet-printer-escpr2-1.1.32-1lsb3.2.x86_64.rpm 2765754 BLAKE2B 8cafde3233d752fcf088824fe4daa78d3fb9d86569556a702dfcd0dc985f012566dfe1f42f960483614bd7e079e5f0f0bfb7d5a2a74be7855518ebb923121515 SHA512 a09de75ede3e0aed298828fd126c290b98a0e279af681c0d0d87e043a8ad2a0c12f097e1d85a5ef617b994ef2b45794dbf06b810465243de456d1af65f2f7278
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.31.ebuild 1670 BLAKE2B 4d9a058961500fcb8f05913661a109ec1cb107bf04c0fdedce88d321779c1d9415aa02fce4eb528b5ff8f5c06aa2148ddc90bfef9030e04a2ecf12f594412144 SHA512 139bec7304d5aea9effcb2371d6ee7d46df95777f5b36231ae5bb4ef2614eacbc37425fd4b7b2bf17767bc5b34618001d39bce9685a9a0bd2417b3359864976f
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.32.ebuild 1670 BLAKE2B 5702d6cb02abc6140cb748f1c492aedcab333b45eaa9a3ec490a51c3d8ffec129c8ef1e1dddfd2f2b13d48269fd97ab0d828ecb603830ded3fd0f38d2204f24c SHA512 5651585aa73fb65ac7471f75b0eaab4f58faa3470fe0a4b9171d9271f1146d70f65907f3b8d8ab5f8efdbdf436bc6931dab69f55cd373d73a0f3785a5d41f253
+MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
