@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.30.tar.gz 3989635 BLAKE2B 7ecca3e8df9b9cd1f32d0a155449191626eb8dc632290a02acd8f2e687b4e6c6c7baffe27821cd074656558fcb01fe1148a76dbd7454734a2fd89a4b9f08043a SHA512 b5c5afe506b1fe38dbdb04bda866d0b35bdd7a8b744f263be6057d9c6b8f04a83b0132feffec4d0269ec2160f1cb26d7c87bb02433391820539c77a2fd91af40
 DIST epson-inkjet-printer-escpr2-1.1.31.tar.gz 4008828 BLAKE2B b81c72952bd01b0c6eb1ecad1f4c54391c632edbc5d8dc1fbdb7ddda92b0d586b94725873af076d6ad84bc4cbac0682aa47f2c8833bd4a8918dd9f610ce6a0ec SHA512 0a268bb65c58a94a9f7e46611e4c1925ca42a532d95f01dcbb849de9ab683cd9915200173d1082baf8f82c9487d34b0d56c93a373ecd6e8071672aa9e42b53fc
-EBUILD epson-inkjet-printer-escpr2-1.1.30.ebuild 1319 BLAKE2B e0c8986b413f6a438d82994b2cb561246d2b2499c994c8bf8fca19b265cd71037baa3e5a9211fc813c6b88dd6e2fe3e44fd75e5b23aa0e21bcc2b47ada91d38e SHA512 c5e176006dd759c7cfd8c6ac9a961e08f21c91d853588847aca757cdc310131886287d24711fcecbd5187f1fb6b436c596cc93f45343ccc30b8768f41d492ac3
+DIST epson-inkjet-printer-escpr2-1.1.32.tar.gz 4025795 BLAKE2B 0f39db6e08b44d8388601f2c0035a32661e15382149ea762ded733bf96cea9b9409a0796c0c6528c8324563baf6f38db4d65dbf73b9a89ca478cdd670949e8c3 SHA512 2fed7a5a74bbeda9f19eb2f326549d2a9facafa6b46727809a5f4a01031f94d6b8ccf4d29a55cb536a78d4c857282ed910c8890437426ef7cc3f1e80b78a7b7a
 EBUILD epson-inkjet-printer-escpr2-1.1.31.ebuild 1319 BLAKE2B 2206bd4fb5844feccc7e3c2667125c5f88ba156dc90d74f043db058f47ba51954172a2009f6d13d3cbfa03c8b750ca0d1ce3d0cf09bd72c588dbac71031e0f48 SHA512 75688cb5a289b3625aede423ee613951eeefe5be683e306be59a832e24a93b02a2316947fdcf9e91f63befe3e543cd7fde837d0ee2a101eb31a59bcef75da977
+EBUILD epson-inkjet-printer-escpr2-1.1.32.ebuild 1319 BLAKE2B 839c5e46082fa15989cf905062a94d7d984daf143808365d75413ab472b6486fa74be88f5a180f71ed8daa7a67f82705bb6ad3d77b093c49262871c16743db39 SHA512 124da5195424914a3bbb2f7ef7cd25ca01932e84ce3463d326eafb515cbb11f0c8a690e4622cb8f632922641b0928e1b2c013a0f8bd9b3238e606d8d30fdd63f
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
